# snap

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/snap/: filesystem.hpp  string.hpp
include/snap/sqlite3/: Column.hpp  Database.hpp  Statement.hpp
include/snap/zip/: Archive.hpp
scripts/: CMakeUtils.cmake  FindLibZip.cmake  FindSQLite3.cmake
src/: CMakeLists.txt
src/sqlite3/: Column.cpp  Database.cpp  Statement.cpp
src/zip/: Archive.cpp
test/: CMakeLists.txt  FilesystemTest.cpp  StringTest.cpp
test/sqlite3/: ColumnTest.cpp  Constants.hpp  DatabaseTest.cpp  StatementTest.cpp
test/zip/: ArchiveTest.cpp  Constants.hpp
